WIP: adapt webservice DTOs and SOAP impls for JDK-21 generated types; converters and Ui SOAP updated; handle checked exceptions and wrapper live-list patterns