@@ -73,7 +73,7 @@ public class PSItemConverterUtils
    /**
     * Creates a new item field for the supplied content type and field name
     * through the item definition manager.
-    * 
+    *
     * @param contentType the content type name for which to create the new
     *    item field, not <code>null</code> or empty.
     * @param fieldName the name of the field to create, not <code>null</code>
@@ -81,9 +81,9 @@ public class PSItemConverterUtils
     * @return the new item field created, never <code>null</code>.
     * @throws ConversionException if no item definition is found for the
     *    specified content type or if no mapping exists for the supplied
-    *    field name. 
+    *    field name.
     */
-   public static PSItemField createItemField(String contentType, 
+   public static PSItemField createItemField(String contentType,
       String fieldName) throws ConversionException
    {
       if (StringUtils.isBlank(contentType))
@@ -93,15 +93,15 @@ public class PSItemConverterUtils
       if (StringUtils.isBlank(fieldName))
          throw new IllegalArgumentException(
             "fieldName cannot be null or empty");
-      
+
       PSItemDefinition def = getItemDefinition(contentType);
 
       // get the field definition
-      com.percussion.design.objectstore.PSField fieldDef = 
+      com.percussion.design.objectstore.PSField fieldDef =
          def.getFieldByName(fieldName);
-      
+
       // get the ui definition
-      PSContentEditorPipe pipe = 
+      PSContentEditorPipe pipe =
          (PSContentEditorPipe) def.getContentEditor().getPipe();
       PSDisplayMapping mapping = pipe.getMapper().getUIDefinition().getMapping(
          fieldName);
@@ -110,19 +110,19 @@ public class PSItemConverterUtils
             "Unknown field name " + fieldName +
             " in item definition for content type " + contentType);
       PSUISet uiDef = mapping.getUISet();
-      
+
       // is this a multivalued field
       PSFieldSet fieldSet = pipe.getMapper().getFieldSet();
-      boolean isMultiValued = 
+      boolean isMultiValued =
          fieldSet.getType() == PSFieldSet.TYPE_SIMPLE_CHILD;
-      
+
       return new PSItemField(fieldDef, uiDef, isMultiValued);
    }
 
    /**
     * Convert the supplied server children to client children.
-    * 
-    * @param children the server children to convert, not <code>null</code>, 
+    *
+    * @param children the server children to convert, not <code>null</code>,
     *    may be empty.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
@@ -133,95 +133,93 @@ public class PSItemConverterUtils
       Iterator<PSItemChild> children, PSConverter callingConverter)
    {
       List<PSItemChildren> destChildren = new ArrayList<PSItemChildren>();
-      
+
       while (children.hasNext())
       {
          PSItemChild child = children.next();
-         
+
          PSItemChildren destChild = new PSItemChildren();
          destChild.setName(child.getName());
          destChild.setDisplayName(child.getDisplayName());
          destChildren.add(destChild);
-         
+
          List<PSChildEntry> destEntries = new ArrayList<PSChildEntry>();
          Iterator<PSItemChildEntry> entries = child.getAllEntries();
          while (entries.hasNext())
          {
             PSItemChildEntry entry = entries.next();
-            
+
             destEntries.add((PSChildEntry) callingConverter.getConverter(
                PSChildEntry.class).convert(PSChildEntry.class, entry));
          }
 
-         destChild.setPSChildEntry(destEntries.toArray(
-            new PSChildEntry[destEntries.size()]));
+         destChild.setPSChildEntry(destEntries);
       }
-      
+
       return destChildren.toArray(new PSItemChildren[destChildren.size()]);
    }
 
    /**
     * Convert the server child entries to client child entries.
-    * 
+    *
     * @param contentTypeId the content type that contains the child entries.
     * @param childId the child id of the entries.
-    * @param clientChild the client child to update with the converties entires, 
+    * @param clientChild the client child to update with the converties entires,
     *    may not be <code>null</code>.
     * @param entries the entries to convert, never <code>null</code>, may be
     *    empty.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
     */
-   public static void toClientChildEntries(long contentTypeId, int childId, 
-      PSItemChildren clientChild, Iterator<PSItemChildEntry> entries, 
+   public static void toClientChildEntries(long contentTypeId, int childId,
+      PSItemChildren clientChild, Iterator<PSItemChildEntry> entries,
       PSConverter callingConverter)
    {
       if (clientChild == null)
          throw new IllegalArgumentException("clientChild may not be null");
-      
+
       if (entries == null)
          throw new IllegalArgumentException("entries may not be null");
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
-      
+
       List<PSChildEntry> clientEntries = new ArrayList<PSChildEntry>();
       while (entries.hasNext())
       {
          PSItemChildEntry entry = entries.next();
-         entry.setGUID(new PSLegacyGuid(contentTypeId, childId, 
+         entry.setGUID(new PSLegacyGuid(contentTypeId, childId,
             entry.getChildRowId()));
          clientEntries.add((PSChildEntry) callingConverter.getConverter(
             PSChildEntry.class).convert(PSChildEntry.class, entry));
       }
-      
-      clientChild.setPSChildEntry(clientEntries.toArray(
-         new PSChildEntry[clientEntries.size()]));
+
+      clientChild.setPSChildEntry(clientEntries);
    }
 
    /**
-    * Convert the values for all supplied client fields to server field values 
+    * Convert the values for all supplied client fields to server field values
     * and update them in the supplied server item.
-    * 
-    * @param item the server item in which to update the converted 
+    *
+    * @param item the server item in which to update the converted
     *    field values, not <code>null</code>.
-    * @param id the id of the item to convert the fields for, 
+    * @param id the id of the item to convert the fields for,
     *    not <code>null</code>.
-    * @param fields an array of client fields to convert the values from, 
+    * @param fields an array of client fields to convert the values from,
     *    not <code>null</code>, may be empty.
     */
-   public static void toServerFields(IPSItemAccessor item, IPSGuid id, 
+   public static void toServerFields(IPSItemAccessor item, IPSGuid id,
       PSField[] fields)
    {
       if (item == null)
          throw new IllegalArgumentException("item cannot be null");
-      
+
       if (id == null)
          throw new IllegalArgumentException("id cannot be null");
-      
+
       if (fields == null)
          throw new IllegalArgumentException("fields cannot be null");
-      
+
       for (PSField field : fields)
       {
          PSItemField destField = item.getFieldByName(field.getName());
@@ -229,68 +227,64 @@ public class PSItemConverterUtils
          {
             throw new ConversionException(
                PSWebserviceErrors.createErrorMessage(
-                  IPSWebserviceErrors.UNKNOWN_FIELD_NAME, id.toString(), 
+                  IPSWebserviceErrors.UNKNOWN_FIELD_NAME, id.toString(),
                   field.getName()));
          }
-         
+
          toServerFieldValues(destField, field);
       }
    }
-   
+
    /**
-    * Convert the values from the supplied client field to server field values 
+    * Convert the values from the supplied client field to server field values
     * and set them on the provided server field.
-    *  
-    * @param serverField the server field to which to set the converted client 
+    *
+    * @param serverField the server field to which to set the converted client
     *    field values, not <code>null</code>.
     * @param field the client field from which to convert the values, not
     *    <code>null</code>.
     */
-   public static void toServerFieldValues(PSItemField serverField, 
+   public static void toServerFieldValues(PSItemField serverField,
       PSField field)
    {
       if (serverField == null)
          throw new IllegalArgumentException("serverField cannot be null");
-      
+
       if (field == null)
          throw new IllegalArgumentException("field cannot be null");
-      
+
       serverField.clearValues();
-   
-      com.percussion.webservices.content.PSFieldValue[] values = 
+
+      java.util.List<com.percussion.webservices.content.PSFieldValue> values =
          field.getPSFieldValue();
-      
-      if (values != null)
+
+      if (values != null && !values.isEmpty())
       {
          IPSFieldValue destValue = null;
-         if (field.getDataType().equals(PSFieldDataType.binary))
+         String dataType = String.valueOf(field.getDataType());
+         if (PSFieldDataType.binary.getValue().equals(dataType))
          {
-            com.percussion.webservices.content.PSFieldValue[] binaryValues = 
-               field.getPSFieldValue();
-            if (binaryValues != null && binaryValues.length > 0)
+            com.percussion.webservices.content.PSFieldValue binaryValue =
+               values.get(0);
+            if (binaryValue != null)
             {
-               com.percussion.webservices.content.PSFieldValue binaryValue = 
-                  binaryValues[0];
-               if (binaryValue != null)
+               if (StringUtils.isBlank(binaryValue.getAttachmentId()))
                {
-                  if (StringUtils.isBlank(binaryValue.getAttachmentId()))
-                  {
-                     /*
-                      * If there is no attachment identifier, we assume they
-                      * supplied base64 encoded data.
-                      */
-                     destValue = serverField.createFieldValue(
-                        binaryValue.getRawData());
-                  }
-                  else
-                     serverField.setHrefLocation(binaryValue.getAttachmentId());
+                  /*
+                   * If there is no attachment identifier, we assume they
+                   * supplied base64 encoded data.
+                   */
+                  destValue = serverField.createFieldValue(
+                     binaryValue.getRawData());
                }
+               else
+                  serverField.setHrefLocation(binaryValue.getAttachmentId());
             }
-            
+
             if (destValue != null)
                serverField.addValue(destValue);
          }
-         else if (field.getDataType().equals(PSFieldDataType.date))
+         else if (PSFieldDataType.date.getValue().equals(dataType))
          {
             for (com.percussion.webservices.content.PSFieldValue value : values)
             {
@@ -303,8 +297,8 @@ public class PSItemConverterUtils
                }
             }
          }
-         else if (field.getDataType().equals(PSFieldDataType.number) ||
-            field.getDataType().equals(PSFieldDataType.text))
+         else if (PSFieldDataType.number.getValue().equals(dataType) ||
+            PSFieldDataType.text.getValue().equals(dataType))
          {
             for (com.percussion.webservices.content.PSFieldValue value : values)
             {
@@ -314,10 +308,10 @@ public class PSItemConverterUtils
          }
       }
    }
-   
+
    /**
     * Convert the supplied server field to a client field.
-    * 
+    *
     * @param source the server field to convert, not <code>null</code>.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
@@ -325,12 +319,12 @@ public class PSItemConverterUtils
     * @throws PSCmsException for any error.
     */
    @SuppressWarnings("unchecked")
-   public static PSField toClientField(PSItemField source, 
+   public static PSField toClientField(PSItemField source,
       PSConverter callingConverter) throws PSCmsException
    {
       if (source == null)
          throw new IllegalArgumentException("source cannot be null");
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
 
@@ -338,56 +332,57 @@ public class PSItemConverterUtils
       if (StringUtils.isBlank(contentType))
          throw new ConversionException(
             "You must set the contentType for each field to convert.");
-      
+
       PSItemFieldMeta meta = source.getItemFieldMeta();
-      com.percussion.design.objectstore.PSField def = 
+      com.percussion.design.objectstore.PSField def =
          getFieldDefinition(contentType, source.getName());
       if (def == null)
          throw new ConversionException(
-            "No field definition found for content type " + contentType + 
+            "No field definition found for content type " + contentType +
             " and field " + source.getName());
 
       PSField dest = new PSField();
       dest.setName(source.getName());
       dest.setAllowActiveTags(def.isAllowActiveTags());
       dest.setCleanupNamespaces(def.isCleanupNamespaces());
-      dest.setDataType((PSFieldDataType) callingConverter.getConverter(
-         PSFieldDataType.class).convert(PSFieldDataType.class, 
-            new Integer(meta.getBackendDataType())));
+      PSFieldDataType dt = (PSFieldDataType) callingConverter.getConverter(
+         PSFieldDataType.class).convert(PSFieldDataType.class,
+            Integer.valueOf(meta.getBackendDataType()));
+      dest.setDataType(dt == null ? null : dt.getValue());
       if (def.getDeclaredNamespaces() != null && def.getDeclaredNamespaces().length>0)
          dest.setDeclaredNamespaces(def.getDeclaredNamespaces().toString());
       dest.setDisplayName(meta.getDisplayName());
-      dest.setFieldValueType(
-         (PSFieldFieldValueType) callingConverter.getConverter(
-            PSFieldFieldValueType.class).convert(PSFieldFieldValueType.class, 
-               new Integer(meta.getFieldValueType())));
+      PSFieldFieldValueType fvt = (PSFieldFieldValueType) callingConverter.getConverter(
+            PSFieldFieldValueType.class).convert(PSFieldFieldValueType.class,
+               Integer.valueOf(meta.getFieldValueType()));
+      dest.setFieldValueType(fvt == null ? null : fvt.getValue());
       dest.setMimeType(def.getMimeType());
       dest.setShowInPreview(meta.showInPreview());
-      dest.setSourceType((PSFieldSourceType) callingConverter.getConverter(
-         PSFieldSourceType.class).convert(PSFieldSourceType.class, 
-            new Integer(meta.getSourceType())));
-      dest.setTransferEncoding(
-         (PSFieldTransferEncoding) callingConverter.getConverter(
+      PSFieldSourceType srcType = (PSFieldSourceType) callingConverter.getConverter(
+         PSFieldSourceType.class).convert(PSFieldSourceType.class,
+            Integer.valueOf(meta.getSourceType()));
+      dest.setSourceType(srcType == null ? null : srcType.getValue());
+      PSFieldTransferEncoding te = (PSFieldTransferEncoding) callingConverter.getConverter(
             PSFieldTransferEncoding.class).convert(
-               PSFieldTransferEncoding.class, 
-               new Integer(meta.getTransferEncoding())));
-      dest.setDimension(
-         (PSFieldDimension) callingConverter.getConverter(
-            PSFieldDimension.class).convert(PSFieldDimension.class, 
+               PSFieldTransferEncoding.class,
+               Integer.valueOf(meta.getTransferEncoding()));
+      dest.setTransferEncoding(te == null ? null : te.getValue());
+      PSFieldDimension dim = (PSFieldDimension) callingConverter.getConverter(
+            PSFieldDimension.class).convert(PSFieldDimension.class,
                com.percussion.design.objectstore.PSField.PSDimensionEnum.valueOf(
-                  def.getOccurrenceDimension(null))));
-      
-      List<com.percussion.webservices.content.PSFieldValue> fieldValues = 
+                  def.getOccurrenceDimension(null)));
+      dest.setDimension(dim == null ? null : dim.getValue());
+
+      List<com.percussion.webservices.content.PSFieldValue> fieldValues =
          toClientFieldValues(source);
-      dest.setPSFieldValue(fieldValues.toArray(
-         new com.percussion.webservices.content.PSFieldValue[fieldValues.size()]));
-      
+      dest.getPSFieldValue().addAll(fieldValues);
+
       return dest;
    }
-   
+
    /**
     * Convert the supplied server fields to client fields.
-    * 
+    *
     * @param fields the server fields to convert, not <code>null</code>, may
     *    be empty.
     * @param contentType the content type for which to make the conversion,
@@ -398,19 +393,19 @@ public class PSItemConverterUtils
     * @throws PSCmsException for field value conversion errors.
     */
    @SuppressWarnings("unchecked")
-   public static PSField[] toClientFields(Iterator<PSItemField> fields, 
+   public static PSField[] toClientFields(Iterator<PSItemField> fields,
       String contentType, PSConverter callingConverter) throws PSCmsException
    {
       if (fields == null)
          throw new IllegalArgumentException("fields cannot be null");
-      
+
       if (StringUtils.isBlank(contentType))
          throw new IllegalArgumentException(
             "contentType cannot be null or empty");
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
-      
+
       List<PSField> destFields = new ArrayList<PSField>();
       while (fields.hasNext())
       {
@@ -418,16 +413,16 @@ public class PSItemConverterUtils
          field.setContentType(contentType);
          destFields.add(toClientField(field, callingConverter));
       }
-      
+
       return destFields.toArray(new PSField[destFields.size()]);
    }
-   
+
    /**
     * Convert the supplied server field values into client field values.
-    * 
-    * @param source the source field for which to convert all values, 
+    *
+    * @param source the source field for which to convert all values,
     *    not <code>null</code>.
-    * @return a list with all client field values converted from the supplied 
+    * @return a list with all client field values converted from the supplied
     *    source, never <code>null</code>, may be empty.
     * @throws PSCmsException for any error.
     */
@@ -436,8 +431,8 @@ public class PSItemConverterUtils
    {
       if (source == null)
          throw new IllegalArgumentException("source cannot be null");
-      
-      List<com.percussion.webservices.content.PSFieldValue> destValues = 
+
+      List<com.percussion.webservices.content.PSFieldValue> destValues =
          new ArrayList<com.percussion.webservices.content.PSFieldValue>();
 
       Iterator<IPSFieldValue> values = source.getAllValues();
@@ -445,9 +440,9 @@ public class PSItemConverterUtils
       {
          IPSFieldValue value = values.next();
 
-         com.percussion.webservices.content.PSFieldValue destValue = 
+         com.percussion.webservices.content.PSFieldValue destValue =
             new com.percussion.webservices.content.PSFieldValue();
-         
+
          if (value instanceof PSBinaryValue)
          {
             PSBinaryValue binary = (PSBinaryValue) value;
@@ -470,62 +465,84 @@ public class PSItemConverterUtils
          {
             destValue.setRawData(value.getValueAsString());
          }
-         
+
          destValues.add(destValue);
       }
-      
+
       return destValues;
    }
-   
+
    /**
-    * Convert the client children to server children and set them on the 
+    * Convert the client children to server children and set them on the
     * supplied item.
-    * 
+    *
     * @param serverItem The item to set the children on, not <code>null</code>.
-    * @param children The children to convert, may be <code>null</code> or 
+    * @param children The children to convert, may be <code>null</code> or
     *    empty.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
     */
-   public static void toServerChildren(PSCoreItem serverItem, 
+   public static void toServerChildren(PSCoreItem serverItem,
       PSItemChildren[] children, PSConverter callingConverter)
    {
       if (serverItem == null)
          throw new IllegalArgumentException("serverItem cannot be null");
-      
+
       if (children == null)
          return;
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
 
       for (PSItemChildren child : children)
       {
          PSItemChild destChild = serverItem.getChildByName(child.getName());
-         toServerChildEntries(destChild, child.getPSChildEntry(), 
+         toServerChildEntries(destChild, child.getPSChildEntry(),
             callingConverter);
       }
    }
-   
+
+   /**
+    * Overload accepting a List of children (new DTO shape).
+    */
+   public static void toServerChildren(PSCoreItem serverItem,
+      java.util.List<PSItemChildren> children, PSConverter callingConverter)
+   {
+      if (serverItem == null)
+         throw new IllegalArgumentException("serverItem cannot be null");
+
+      if (children == null)
+         return;
+
+      if (callingConverter == null)
+         throw new IllegalArgumentException("callingConverter cannot be null");
+
+      for (PSItemChildren child : children)
+      {
+         PSItemChild destChild = serverItem.getChildByName(child.getName());
+         toServerChildEntries(destChild, child.getPSChildEntry(), callingConverter);
+      }
+   }
+
    /**
     * Convert the client child entries to server entries and set them on the
     * supplied child.
-    * 
-    * @param serverChild the child to set the entries on, never 
+    *
+    * @param serverChild the child to set the entries on, never
     *    <code>null</code>.
     * @param entries the entries, may be <code>null</code> or empty.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
     */
-   public static void toServerChildEntries(PSItemChild serverChild, 
+   public static void toServerChildEntries(PSItemChild serverChild,
       PSChildEntry[] entries, PSConverter callingConverter)
    {
       if (serverChild == null)
          throw new IllegalArgumentException("serverChild cannot be null");
-      
+
       if (entries == null)
          return;
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
 
@@ -533,32 +550,45 @@ public class PSItemConverterUtils
       {
          serverChild.addEntry((PSItemChildEntry) callingConverter.getConverter(
             PSItemChildEntry.class).convert(PSItemChildEntry.class, entry));
-      }      
+      }
    }
-   
+
    /**
-    * Get the item definition for the specified content type.
-    * 
-    * @param contentType the content type for which to get the item
-    *    definition, not <code>null</code> or empty.
-    * @return the requested item definition, never <code>null</code>.
-    * @throws ConversionException if no item definition is registered for
-    *    the specified content type.
+    * Overload accepting a List of child entries (new DTO shape).
     */
-   public static PSItemDefinition getItemDefinition(String contentType) 
+   public static void toServerChildEntries(PSItemChild serverChild,
+      java.util.List<PSChildEntry> entries, PSConverter callingConverter)
+   {
+      if (serverChild == null)
+         throw new IllegalArgumentException("serverChild cannot be null");
+
+      if (entries == null)
+         return;
+
+      if (callingConverter == null)
+         throw new IllegalArgumentException("callingConverter cannot be null");
+
+      for (PSChildEntry entry : entries)
+      {
+         serverChild.addEntry((PSItemChildEntry) callingConverter.getConverter(
+            PSItemChildEntry.class).convert(PSItemChildEntry.class, entry));
+      }
+   }
+
+   public static PSItemDefinition getItemDefinition(String contentType)
       throws ConversionException
    {
       if (StringUtils.isBlank(contentType))
          throw new IllegalArgumentException(
             "contentType cannot be null or empty");
-      
+
       PSItemDefManager itemDefMgr = PSItemDefManager.getInstance();
-      
+
       try
       {
-         PSItemDefinition def = itemDefMgr.getItemDef(contentType, 
+         PSItemDefinition def = itemDefMgr.getItemDef(contentType,
             PSItemDefManager.COMMUNITY_ANY);
-         
+
          return def;
       }
       catch (PSInvalidContentTypeException e)
@@ -567,11 +597,11 @@ public class PSItemConverterUtils
             "Unregistered content type : " + contentType);
       }
    }
-   
+
    /**
     * Get the item definition for the specified content type id.
-    * 
-    * @param contentTypeId the id of the content type for which to get the item 
+    *
+    * @param contentTypeId the id of the content type for which to get the item
     *    definition.
     * @return the requested item definition, never <code>null</code>.
     * @throws ConversionException if no item definition is registered for
@@ -592,11 +622,11 @@ public class PSItemConverterUtils
             "Unregistered content type id : " + contentTypeId);
       }
    }
-   
+
    /**
     * Get the field definition for the supplied parameters.
-    * 
-    * @param contentType the content type fo which to get the field 
+    *
+    * @param contentType the content type fo which to get the field
     *    definitions, not <code>null</code> or empty.
     * @param fieldName the field name for which to get the definition, not
     *    <code>null</code> or empty.
@@ -612,41 +642,44 @@ public class PSItemConverterUtils
       if (StringUtils.isBlank(fieldName))
          throw new IllegalArgumentException(
             "fieldName cannot be null or empty");
-      
+
       PSItemDefinition def = getItemDefinition(contentType);
 
-      com.percussion.design.objectstore.PSField fieldDef = 
+      com.percussion.design.objectstore.PSField fieldDef =
          def.getFieldByName(fieldName);
-      
+
       return fieldDef;
    }
-   
+
    /**
     * Convert the all folder paths of the supplied item to an array of
     * client folders.
-    * 
-    * @param folderPaths the list of folder paths to convert, may be 
+    *
+    * @param folderPaths the list of folder paths to convert, may be
     *    <code>null</code> or empty.
     * @return an array with all client item folder paths for the supplied id,
     *    never <code>null</code>, may be empty.
     */
-   public static PSItemFolders[] toClientFolders(List<String> folderPaths) 
+   public static PSItemFolders[] toClientFolders(List<String> folderPaths)
    {
       if (folderPaths == null)
          return new PSItemFolders[0];
-      
+
       PSItemFolders[] folders = new PSItemFolders[folderPaths.size()];
-      for (int i=0; i<folderPaths.size(); i++)
-         folders[i] = new PSItemFolders(folderPaths.get(i));
-      
+      for (int i=0; i<folderPaths.size(); i++){
+         PSItemFolders f = new PSItemFolders();
+         f.setPath(folderPaths.get(i));
+         folders[i] = f;
+      }
+
       return folders;
    }
-   
+
    /**
-    * Convert the supplied client folders to server folders for the specified 
-    * item id. Existing parent folders of the specified item will remain 
+    * Convert the supplied client folders to server folders for the specified
+    * item id. Existing parent folders of the specified item will remain
     * untouched, new ones will be added and removed ones will be deleted.
-    * 
+    *
     * @param folders a list with client folders to convert to server folders,
     *    may be <code>null</code> or empty.
     * @return a list with all server folders, never <code>null</code>, may
@@ -661,14 +694,14 @@ public class PSItemConverterUtils
          for (PSItemFolders folder : folders)
             folderPaths.add(folder.getPath());
       }
-      
+
       return folderPaths;
    }
-   
+
    /**
     * Convert the supplied server related items to client related items.
-    * 
-    * @param relatedItems the server related items to convert, not 
+    *
+    * @param relatedItems the server related items to convert, not
     *    <code>null</code>.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
@@ -677,58 +710,57 @@ public class PSItemConverterUtils
     */
    public static PSItemSlots[] toClientRelatedContent(
       Iterator<PSItemRelatedItem> relatedItems, PSConverter callingConverter) throws PSAssemblyException {
-      Map<String, List<PSRelatedItem>> relatedItemsBySlot = 
+      Map<String, List<PSRelatedItem>> relatedItemsBySlot =
          new HashMap<String, List<PSRelatedItem>>();
       Map<IPSGuid, String> slotIdName = new HashMap<IPSGuid, String>();
       IPSAssemblyService asrv = PSAssemblyServiceLocator.getAssemblyService();
-      
+
       while (relatedItems.hasNext())
       {
          PSItemRelatedItem relatedItem = relatedItems.next();
-         
+
          String slotName = getSlotName(relatedItem, slotIdName, asrv);
-         List<PSRelatedItem> destRelatedItems = 
+         List<PSRelatedItem> destRelatedItems =
             relatedItemsBySlot.get(slotName);
          if (destRelatedItems == null)
          {
             destRelatedItems = new ArrayList<PSRelatedItem>();
             relatedItemsBySlot.put(slotName, destRelatedItems);
          }
-         
+
          destRelatedItems.add((PSRelatedItem) callingConverter.getConverter(
             PSRelatedItem.class).convert(PSRelatedItem.class, relatedItem));
       }
-      
+
       PSItemSlots[] destSlots = new PSItemSlots[relatedItemsBySlot.size()];
       int index = 0;
       for (String slotName : relatedItemsBySlot.keySet())
       {
          PSItemSlots destSlot = new PSItemSlots();
          destSlot.setName(slotName);
-         
-         List<PSRelatedItem> destRelatedItems = 
+
+         List<PSRelatedItem> destRelatedItems =
             relatedItemsBySlot.get(slotName);
-         destSlot.setPSRelatedItem(destRelatedItems.toArray(
-            new PSRelatedItem[destRelatedItems.size()]));
-         
+         destSlot.setPSRelatedItem(destRelatedItems);
+
          destSlots[index++] = destSlot;
       }
-      
+
       return destSlots;
    }
-   
+
    /**
     * Get the slot name from the given related item.
-    * 
+    *
     * @param relatedItem the related item that contains slot ID, assumed not
     *    <code>null</code>.
     * @param slotIdName slot ID/name mapping. The key is the slot ID, value is
     *    the slot name, assumed not <code>null</code>, may be empty. This map i
-    *    s used to cache data that is retrieved by this method for use in 
-    *    future calls to this method. The first time in, it should be empty, 
+    *    s used to cache data that is retrieved by this method for use in
+    *    future calls to this method. The first time in, it should be empty,
     *    then pass the same map back in for each additional call.
     * @param asrv the assembly service, assumed not <code>null</code>.
-    * 
+    *
     * @return the slot name, never <code>null</code>.
     */
    private static String getSlotName(PSItemRelatedItem relatedItem,
@@ -740,60 +772,96 @@ public class PSItemConverterUtils
       String name = rel.getSlotName();
       if (StringUtils.isNotBlank(name))
          return name;
-      
+
       IPSGuid id = rel.getSlotId();
       name = slotIdName.get(id);
       if (name != null)
          return name;
-      
+
       name = asrv.loadSlot(id).getName();
       slotIdName.put(id, name);
-      
+
       return name;
    }
-   
+
    /**
     * Converter the supplied slots into server related items and save them
     * to the supplied item.
-    * 
+    *
     * @param serverItem the item to which to set the converter slots, not
-    *    <code>null</code>. 
+    *    <code>null</code>.
     * @param slots the slots to convert, may be <code>null</code> or empty.
     * @param callingConverter the converter calling this method, not
     *    <code>null</code>.
     */
-   public static void toServerRelatedContent(PSCoreItem serverItem, 
+   public static void toServerRelatedContent(PSCoreItem serverItem,
       PSItemSlots[] slots, PSConverter callingConverter)
    {
       if (serverItem == null)
          throw new IllegalArgumentException("serverItem cannot be null");
-      
+
       if (callingConverter == null)
          throw new IllegalArgumentException("callingConverter cannot be null");
-      
+
       if (slots == null)
          return;
-      
-      Map<String, PSItemRelatedItem> destRelatedItems = 
+
+      Map<String, PSItemRelatedItem> destRelatedItems =
          new HashMap<String, PSItemRelatedItem>();
 
       for (PSItemSlots slot : slots)
       {
-         PSRelatedItem[] relatedItems = slot.getPSRelatedItem();
+         List<PSRelatedItem> relatedItems = slot.getPSRelatedItem();
          for (PSRelatedItem relatedItem : relatedItems)
          {
-            PSItemRelatedItem destRelatedItem = 
+            PSItemRelatedItem destRelatedItem =
                (PSItemRelatedItem) callingConverter.getConverter(
                   PSItemRelatedItem.class).convert(
                      PSItemRelatedItem.class, relatedItem);
-            
+
             PSDesignGuid guid = new PSDesignGuid(
                relatedItem.getPSAaRelationship().getId());
-            destRelatedItems.put(Integer.toString(guid.getUUID()), 
+            destRelatedItems.put(Integer.toString(guid.getUUID()),
                destRelatedItem);
          }
       }
-      
+
+      serverItem.setRelatedItems(destRelatedItems);
+   }
+
+   /**
+    * Overload accepting a List of slots (new DTO shape).
+    */
+   public static void toServerRelatedContent(PSCoreItem serverItem,
+      java.util.List<PSItemSlots> slots, PSConverter callingConverter)
+   {
+      if (serverItem == null)
+         throw new IllegalArgumentException("serverItem cannot be null");
+
+      if (callingConverter == null)
+         throw new IllegalArgumentException("callingConverter cannot be null");
+
+      if (slots == null)
+         return;
+
+      Map<String, PSItemRelatedItem> destRelatedItems = new HashMap<>();
+
+      for (PSItemSlots slot : slots)
+      {
+         java.util.List<PSRelatedItem> relatedItems = slot.getPSRelatedItem();
+         for (PSRelatedItem relatedItem : relatedItems)
+         {
+            PSItemRelatedItem destRelatedItem =
+               (PSItemRelatedItem) callingConverter.getConverter(
+                  PSItemRelatedItem.class).convert(
+                     PSItemRelatedItem.class, relatedItem);
+
+            PSDesignGuid guid = new PSDesignGuid(
+               relatedItem.getPSAaRelationship().getId());
+            destRelatedItems.put(Integer.toString(guid.getUUID()), destRelatedItem);
+         }
+      }
+
       serverItem.setRelatedItems(destRelatedItems);
    }
 }
